--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -47,6 +47,7 @@
 
   &__main {
     padding: 32px 0;
+    background-color: #fff;
   }
 
   &__bottom {
@@ -79,7 +80,7 @@
   .social {
     &__list {
       position: absolute;
-      right: 0;
+      right: 10px;
       top: -4px;
     }
 
@@ -120,7 +121,7 @@
   .copyright {
     & span, & a {
       @include fontSize(16, 18);
-      color:#565656;
+      color: #565656;
     }
 
     & span {
@@ -131,7 +132,7 @@
           content: '';
           width: 1px;
           height: 100%;
-          background-color: rgba(0,0,0,.2);
+          background-color: rgba(0, 0, 0, .2);
           position: absolute;
           right: 24px;
           top: 0;
