--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -72,6 +72,17 @@
 }
 
 .s-values {
+  & .heading {
+    &.decor {
+      &:after {
+        content: '';
+        height: 35px;
+        top: 8px;
+        transform: none;
+
+      }
+    }
+  }
 
   .values {
     &__wrap {
@@ -132,7 +143,9 @@
     }
 
     &__description {
-
+      @include fontSize(14, 16);
+      color: #565656;
+      line-height: 140%;
     }
   }
 }
@@ -174,6 +187,7 @@
   }
 
   .gallery-bottom {
+    height: auto;
     @media (max-width: $breakpoint-md) {
       margin-top: 55px;
     }
@@ -182,15 +196,29 @@
   & .swiper {
     &-pagination {
       position: absolute;
-      left: 100%;
+      left: 0;
       bottom: 0;
-      min-width: 180px;
+      min-width: 210px;
+      line-height: 1.221;
+      @include fontSize(18, 24);
+      @media (max-width: $breakpoint-md) {
+        top: 12px;
+        right: 15px;
+        left: auto;
+        bottom: auto;
+        min-width: max-content;
+      }
+
       &-current {
         font-size: 80px;
+        @include fontSize(60, 80);
         line-height: 1;
         color: #A59389;
         margin-right: 28px;
         font-weight: 700;
+        @media (max-width: $breakpoint-md) {
+          margin-right: 7px;
+        }
       }
 
       &-total {
@@ -236,6 +264,13 @@
     }
   }
 
+  & .description {
+    padding-bottom: 80px;
+    @media (max-width: $breakpoint-md) {
+      padding-bottom: 0;
+    }
+  }
+
   .history {
     &-img {
       position: absolute;
@@ -248,7 +283,7 @@
       &__wrap {
         position: relative;
         padding-bottom: 62%;
-        min-height: 580px;
+        min-height: 100%;
         @media (max-width: $breakpoint-md) {
           min-height: 228px;
         }
