--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -65,6 +65,18 @@
         bottom: -3px;
       }
     }
+
+    & .decor {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 3;
+      width: calc(50% + 46px);
+      background: radial-gradient(black, transparent);
+      height: 100%;
+      object-fit: cover;
+    }
+
   }
 
   & .social {
@@ -76,8 +88,8 @@
       display: flex;
       -webkit-flex-flow: row wrap;
       flex-flow: row wrap;
-      &__item{
-        &:not(&:last-child){
+      &__item {
+        &:not(&:last-child) {
           margin-right: 12px;
         }
       }
@@ -98,7 +110,7 @@
         flex-flow: row wrap;
         padding: 24px 15px 0 15px;
       }
-      &__title{
+      &__title {
 
       }
     }
@@ -119,6 +131,8 @@
           transform-origin: 100% 100%;
           -webkit-transform-origin: 100% 100%;
           margin-top: -19px;
+          @include fontSize(14, 16);
+          color: #020202;
         }
       }
 
@@ -133,9 +147,9 @@
 
         &:before {
           content: '';
-          width: 1px;
+          width: 1.5px;
           height: calc(100% - 331px);
-          background-color: red;
+          background-color: #000000;
           position: absolute;
           bottom: 127px;
           top: 204px;
@@ -205,7 +219,7 @@
       &__wrap {
         position: absolute;
         bottom: 0;
-        left: 180px;
+        left: 177px;
         padding: 36px;
 
         z-index: 2;
@@ -436,7 +450,6 @@
 
 
 .s-about {
-
   &__inner {
     padding-left: 20px;
     @media (max-width: $breakpoint-md) {
@@ -480,7 +493,9 @@
 
       & .column {
         &:not(&:last-child) {
-          margin-bottom: 18px;
+          @media (max-width: $breakpoint-md) {
+            margin-bottom: 18px;
+          }
         }
       }
     }
