--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -113,17 +113,20 @@
       & span {
         @include fontSize(14, 16);
         color: #020202;
+        z-index: 2;
+        position: relative;
       }
 
       @media (max-width: $breakpoint-md) {
         position: relative;
         &:after {
           content: '';
-          width: 100%;
-          height: 1px;
-          background-color: red;
+          width: calc(100% + 12px);
+          left: 0;
+          height: 100%;
+          background-color: #fff;
           position: absolute;
-          right: 13px;
+          z-index: 1;
         }
       }
     }
@@ -152,7 +155,21 @@
         display: flex;
         -webkit-flex-flow: row wrap;
         flex-flow: row wrap;
-        padding: 24px 15px 0 15px;
+        margin: 24px 10px 0 10px;
+        position: relative;
+
+        &:after {
+          content: '';
+          width: calc(100% - 144px);
+          height: 0.5px;
+          background-color: #000000;
+          position: absolute;
+          top: 50%;
+
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: -1;
+        }
       }
     }
     @media (min-width: $breakpoint-md) {
@@ -172,6 +189,15 @@
           transform-origin: 100% 100%;
           -webkit-transform-origin: 100% 100%;
           margin-top: -19px;
+          background-color: #fff;
+          &:after {
+            content: '';
+            height: 26px;
+            width: 24px;
+            background-color: #fff;
+            position: absolute;
+            right: 100%;
+          }
 
         }
       }
@@ -188,13 +214,13 @@
         &:before {
           content: '';
           width: 1.5px;
-          height: calc(100% - 331px);
+          height: calc(100% - 224px);
           background-color: #000000;
           position: absolute;
-          bottom: 127px;
-          top: 204px;
+          top: 50%;
           left: 50%;
-          transform: translateX(-50%);
+          transform: translate(-50%, -50%);
+          z-index: -1;
         }
 
       }
